--- a/src/pages/crud/orders.astro
+++ b/src/pages/crud/orders.astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 const { email } = Astro.locals;
 ---
 
-<Layout title="dashboard">
+<Layout title="Orders">
   <h1>Welcome {email}</h1>
   <p>We are happy to see you here</p>
   <form action="/api/auth/signout">
