--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,6 +28,9 @@ import { Image } from "astro:assets";
         <a href="/crud/clients" class="hover:text-pink-400">
           <li>Clients</li>
         </a>
+        <a href="/crud/orders" class="hover:text-pink-400">
+          <li>Orders</li>
+        </a>
       </ul>
     </div>
   </div>
