simplified requests and its working with no errors

--- a/src/pages/crud/clients.astro
+++ b/src/pages/crud/clients.astro
@@ -9,5 +9,5 @@ const { data } = (await supabase.from("clients").select("*")) as {
 ---
 
 <Layout title="Clients">
-  <ClientsTable reviews={data} client:idle />
+  <ClientsTable client:idle />
 </Layout>
