--- a/src/pages/crud/clients.astro
+++ b/src/pages/crud/clients.astro
@@ -1,11 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import { supabase } from "../../lib/supabase";
-import { ClientsTable, type ClientEntry } from "../../components/ClientsTable";
-
-const { data } = (await supabase.from("clients").select("*")) as {
-  data: ClientEntry[];
-};
+import { ClientsTable } from "../../components/ClientsTable";
 ---
 
 <Layout title="Clients">
