--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,9 @@ import ConfettiCard from "../components/ConfettiCard.tsx";
 ---
 
 <Layout title="Welcome to CRM">
-  <main>
-    <h1>Welcome to CRM</h1>
-    <ul role="list" class="link-card-grid">
+  <main class="w-full max-w-screen-md p-4 mx-auto text-xl">
+    <h1 class="mb-20 text-6xl font-bold text-center">Welcome to CRM</h1>
+    <ul role="list" class="grid grid-cols-1 gap-8 p-0 md:grid-cols-2">
       <Card
         href="/dashboard"
         title="Dashboard"
@@ -32,64 +32,3 @@ import ConfettiCard from "../components/ConfettiCard.tsx";
     </ul>
   </main>
 </Layout>
-
-<style>
-  main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    font-size: 20px;
-    line-height: 1.6;
-  }
-  .astro-a {
-    position: absolute;
-    top: -32px;
-    left: 50%;
-    transform: translatex(-50%);
-    width: 220px;
-    height: auto;
-    z-index: -1;
-  }
-  h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    margin-bottom: 1em;
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
-  .instructions {
-    margin-bottom: 2rem;
-    border: 1px solid rgba(var(--accent-light), 25%);
-    background: linear-gradient(
-      rgba(var(--accent-dark), 66%),
-      rgba(var(--accent-dark), 33%)
-    );
-    padding: 1.5rem;
-    border-radius: 8px;
-  }
-  .instructions code {
-    font-size: 0.8em;
-    font-weight: bold;
-    background: rgba(var(--accent-light), 12%);
-    color: rgb(var(--accent-light));
-    border-radius: 4px;
-    padding: 0.3em 0.4em;
-  }
-  .instructions strong {
-    color: rgb(var(--accent-light));
-  }
-  .link-card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 2rem;
-    padding: 0;
-  }
-</style>
