removing unnecessary code

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
-<html lang="en" class="h-full w-full">
+<html lang="en" class="w-full h-full">
   <head>
     <title>{title}</title>
     <meta charset="utf-8" />
@@ -33,7 +33,3 @@ import Header from "../components/Header.astro";
     <slot />
   </body>
 </html>
-
-<script
-  src="https://cdn.jsdelivr.net/npm/canvas-confetti@1/dist/confetti.min.js"
-></script>
