--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,13 @@ if (accessToken && refreshToken) {
 }
 
 export { isAuthenticated };
+
+const navItems = [
+  { text: "Home", href: "/" },
+  { text: "Dashboard", href: "/dashboard" },
+  { text: "Clients", href: "/crud/clients" },
+  { text: "Orders", href: "/crud/orders" },
+];
 ---
 
 <header class="px-3 py-10 sm:px-6">
@@ -33,39 +40,113 @@ export { isAuthenticated };
         title="Flavia's Sweets"
         class="inline-flex items-center"
       >
-        <span class="ml-2 text-3xl font-bold tracking-wide hover:text-pink-400">
+        <span class="ml-2 text-3xl font-bold tracking-wide hover:text-primary">
           Flavia's Sweets
         </span>
       </a>
     </div>
-    <div class="flex items-center space-x-4">
+    <div class="hidden sm:flex items-center space-x-4">
       <ul class="flex space-x-4 text-lg font-bold">
-        <a href="/" class="hover:text-pink-400">
-          <li>Home</li>
-        </a>
-        <a href="/dashboard" class="hover:text-pink-400">
-          <li>Dashboard</li>
-        </a>
-        <a href="/crud/clients" class="hover:text-pink-400">
-          <li>Clients</li>
-        </a>
-        <a href="/crud/orders" class="hover:text-pink-400">
-          <li>Orders</li>
-        </a>
+        {
+          navItems.map((item) => (
+            <a href={item.href} class="hover:text-primary">
+              <li>{item.text}</li>
+            </a>
+          ))
+        }
         {
           isAuthenticated ? (
             <form action="/api/auth/signout" class="mb-6">
-              <button type="submit" class="hover:text-pink-400">
+              <button type="submit" class="hover:text-primary">
                 <li>Sign Out</li>
               </button>
             </form>
           ) : (
-            <a href="/signin" class="hover:text-pink-400">
+            <a href="/signin" class="hover:text-primary">
               <li>Sign In</li>
             </a>
           )
         }
       </ul>
     </div>
+    <div class="flex sm:hidden">
+      <!-- Mobile menu button -->
+      <button id="menuButton" aria-label="Open menu" class="">
+        <!-- Hamburger Icon -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="currentColor"
+          class="bi bi-list"
+          viewBox="0 0 16 16"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+          ></path>
+        </svg>
+      </button>
+    </div>
+  </div>
+
+  <!-- Mobile menu -->
+  <div
+    id="mobileMenu"
+    class="fixed top-0 left-0 z-10 hidden h-full w-full bg-white bg-opacity-90 backdrop-blur-sm sm:hidden"
+  >
+    <!-- 'X' Icon -->
+    <button id="closeButton" class="absolute top-3 right-3 focus:outline-none">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="50"
+        height="50"
+        fill="currentColor"
+        class="bi bi-x"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
+        ></path>
+      </svg>
+    </button>
+    <ul class="flex flex-col items-center justify-center h-full space-y-8">
+      {
+        navItems.map((item) => (
+          <li>
+            <a href={item.href} class="text-5xl font-bold hover:text-primary">
+              {item.text}
+            </a>
+          </li>
+        ))
+      }
+      {
+        isAuthenticated ? (
+          <form action="/api/auth/signout" class="mb-6">
+            <button type="submit" class="text-5xl font-bold hover:text-primary">
+              <li>Sign Out</li>
+            </button>
+          </form>
+        ) : (
+          <a href="/signin" class="text-5xl font-bold hover:text-primary">
+            <li>Sign In</li>
+          </a>
+        )
+      }
+    </ul>
   </div>
 </header>
+
+<script>
+  const menuButton = document.getElementById("menuButton");
+  const closeButton = document.getElementById("closeButton");
+  const mobileMenu = document.getElementById("mobileMenu");
+
+  menuButton?.addEventListener("click", function () {
+    mobileMenu?.classList.remove("hidden");
+  });
+
+  closeButton?.addEventListener("click", function () {
+    mobileMenu?.classList.add("hidden");
+  });
+</script>
